<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="cn.edu.gdut.dictationdemo.HomeFragment"
        android:label="@string/Title">
        <action
            android:id="@+id/action_homeFragment_to_contentFragment"
            app:destination="@id/contentFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/contentFragment"
        android:name="cn.edu.gdut.dictationdemo.ContentFragment"
        android:label="@string/content">
        <action
            android:id="@+id/action_contentFragment_to_winFragment"
            app:destination="@id/winFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_contentFragment_to_loseFragment"
            app:destination="@id/loseFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="cn.edu.gdut.dictationdemo.WinFragment"
        android:label="@string/winflag">
        <action
            android:id="@+id/action_winFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="cn.edu.gdut.dictationdemo.LoseFragment"
        android:label="@string/loseflag"
        tools:layout="@layout/fragment_lose">
        <action
            android:id="@+id/action_loseFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>
</navigation>